--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-asset-image": "^1.0.0",
+    "hexo-asset-image": "git+https://github.com/7ym0n/hexo-asset-image.git",
     "hexo-deployer-git": "^0.3.1",
     "hexo-excerpt-block": "^0.1.0",
     "hexo-generator-archive": "^0.1.4",
