--- a/_config.yml
+++ b/_config.yml
@@ -88,12 +88,13 @@ theme: hollow
 exclude_generator:
 plugins:
   hexo-excerpt-block
+  hexo-generator-feed
 
 ### feed
 feed:
   type: atom
   path: atom.xml
-  limit: 0
+  limit: 20
   hub:
   order_by: -date
   icon: https://foreti.me/imgplace/2019/logo2.png
